ARC: profile image align fixed

--- a/styles/index.css
+++ b/styles/index.css
@@ -84,6 +84,7 @@ main {
 .profile-img-text {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .profile-text {
